--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,9 +11,9 @@ default:
 
 workflow:
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "push"'
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
       when: never
+    - if: '$CI_PIPELINE_SOURCE == "push"'
 
 variables:
   ALMALINUX9_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-almalinux9-conan:1.2.0-rc.3"
@@ -28,6 +28,47 @@ stages:
   - domain
   - integration
   - publish
+
+.build_template: &build_template
+  before_script:
+    - |
+      CONAN_PROFILE=linux_x86_64_gcc11
+      if [ -f /etc/os-release ]; then
+        . /etc/os-release
+        if [[ "$ID" == "centos" ]]; then
+            CONAN_PROFILE=linux_x86_64_gcc11_legacy
+            echo 'source /opt/rh/devtoolset-11/enable' >> ~/.bashrc
+            source ~/.bashrc
+        fi
+      fi
+    - conan config install $ESS_CONAN_CONFIG_URL
+    - gcc --version
+    - g++ --version
+    - cppcheck --version
+
+    - git config --global --add safe.directory '*'
+
+unit-tests:
+  <<: *build_template
+  stage: test
+  image: $CENTOS7_IMAGE
+  script:
+    - mkdir build
+    - cd build
+    - conan install .. --build missing
+    - conan info ../conanfile.txt > CONAN_INFO
+    - cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON -DCOV=ON ..
+    - ninja all UnitTests docs
+    - ninja coverage
+    - cat coverage.txt
+  coverage: '/^TOTAL.*\s+(\d+\%)$/'
+  artifacts:
+    paths:
+      - build/coverage.xml
+    reports:
+      coverage_report:
+        coverage_format: cobertura
+        path: build/coverage.xml
 
 clang-format:
   stage: test
@@ -63,56 +104,14 @@ cppcheck:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
 
-.build_template: &build_template
-  before_script:
-    - |
-      CONAN_PROFILE=linux_x86_64_gcc11
-      if [ -f /etc/os-release ]; then
-        . /etc/os-release
-        if [[ "$ID" == "centos" ]]; then
-            CONAN_PROFILE=linux_x86_64_gcc11_legacy
-            echo 'source /opt/rh/devtoolset-11/enable' >> ~/.bashrc
-            source ~/.bashrc
-        fi
-      fi
-    - |
-      conan config install $ESS_CONAN_CONFIG_URL
-    - gcc --version
-    - g++ --version
-    - cppcheck --version
-
-    - git config --global --add safe.directory '*'
-
-build-debug:
-  <<: *build_template
-  stage: build
-  image: $CENTOS7_IMAGE
-  script:
-    - mkdir build
-    - cd build
-    - conan install --build missing .. --profile="linux_x86_64_gcc11_legacy"
-    - conan info ../conanfile.txt > CONAN_INFO
-    - cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON -DCOV=ON ..
-    - ninja all UnitTests docs
-    - ninja coverage
-    - cat coverage.txt
-  coverage: '/^TOTAL.*\s+(\d+\%)$/'
-  artifacts:
-    paths:
-      - build/coverage.xml
-    reports:
-      coverage_report:
-        coverage_format: cobertura
-        path: build/coverage.xml
 
 build-release:
   <<: *build_template
   stage: build
   image: $CENTOS7_IMAGE
   script:
-    - mkdir build
     - cd build
-    - conan install --build missing .. --profile="linux_x86_64_gcc11_legacy"
+    - conan install .. --build missing
     - conan info ../conanfile.txt > CONAN_INFO
     - ../ci/configure-release.sh .. .
     - ninja all UnitTests docs
@@ -133,9 +132,8 @@ build-alt-distro:
   stage: build
   image: $ALMALINUX9_IMAGE
   script:
-    - mkdir build
     - cd build
-    - conan install --build=missing  .. --profile="linux_x86_64_gcc11"
+    - conan install --build=missing  .. --profile="$CONAN_PROFILE"
     - conan info ../conanfile.txt > CONAN_INFO
     - cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON ..
     - ninja all UnitTests docs
@@ -225,9 +223,7 @@ publish:
   script:
     - jf rt u --build-name="kafka-to-nexus-centos7" --build-number=${CI_PIPELINE_IID} kafka-to-nexus-centos7.tar.gz ecdc-generic-release/${ARTIFACTORY_UPLOAD_PATH}
   rules:
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: never
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_PIPELINE_SOURCE == "push"'
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/${CI_DEFAULT_BRANCH}/${CI_PIPELINE_IID}/"
     - if: $CI_COMMIT_TAG
