--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ default:
   artifacts:
     expire_in: 1 week
   cache:
-    key: conan-cache
+    key: $CI_COMMIT_REF_SLUG
     policy: pull
     paths:
       - $CONAN_USER_HOME/.conan/
@@ -39,7 +39,7 @@ conan-config:
     paths:
       - $BUILD_DIR/
   cache:
-    key: conan-cache
+    key: $CI_COMMIT_REF_SLUG
     policy: push
     paths:
       - $CONAN_USER_HOME/.conan/
@@ -155,9 +155,6 @@ archive:
   artifacts:
     paths:
       - $BUILD_DIR/kafka-to-nexus-centos7.tar.gz
-  cache:
-    key: conan-cache
-    policy: push
 
 domain_tests:
   stage: domain
