--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -200,7 +200,7 @@ publish:
   dependencies:
     - archive
   before_script:
-    - cpy /dev/null kafka-to-nexus-centos7.tar.gz
+    - cp $BUILD_DIR/kafka-to-nexus-centos7.tar.gz .
     - curl -fL https://install-cli.jfrog.io | sh
     - jf config add $ESS_ARTIFACTORY_ID --url=$ESS_ARTIFACTORY_URL --user=$ESS_ARTIFACTORY_ECDC_USER --password=$ESS_ARTIFACTORY_ECDC_GENERIC_TOKEN
     - jf config show
@@ -213,3 +213,5 @@ publish:
     - if: $CI_COMMIT_TAG
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
