--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -213,3 +213,5 @@ publish:
     - if: $CI_COMMIT_TAG
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
