--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,12 +132,11 @@ archive:
   dependencies:
     - centos7-release
   script:
-    - cd $BUILD_DIR
-    - mkdir -p archive/kafka-to-nexus/bin
-    - cp ./bin/kafka-to-nexus archive/kafka-to-nexus/bin/
-    - cp -r ./lib archive/kafka-to-nexus/
-    - cp -r ./licenses archive/kafka-to-nexus/
-    - cp ./CONAN_INFO archive/kafka-to-nexus/
+    - mkdir -p archive/kafka-to-nexus
+    - cp -a ./bin archive/kafka-to-nexus
+    - cp -a ./lib archive/kafka-to-nexus
+    - cp -a ./licenses archive/kafka-to-nexus
+    - cp ./CONAN_INFO archive/kafka-to-nexus
     - tar czf kafka-to-nexus-centos7.tar.gz -C archive kafka-to-nexus
   artifacts:
     paths:
@@ -200,7 +199,7 @@ publish:
   dependencies:
     - archive
   before_script:
-    - cpy /dev/null kafka-to-nexus-centos7.tar.gz
+    - cp $BUILD_DIR/kafka-to-nexus-centos7.tar.gz .
     - curl -fL https://install-cli.jfrog.io | sh
     - jf config add $ESS_ARTIFACTORY_ID --url=$ESS_ARTIFACTORY_URL --user=$ESS_ARTIFACTORY_ECDC_USER --password=$ESS_ARTIFACTORY_ECDC_GENERIC_TOKEN
     - jf config show
@@ -213,3 +212,5 @@ publish:
     - if: $CI_COMMIT_TAG
       variables:
         ARTIFACTORY_UPLOAD_PATH: "${CI_PROJECT_NAME}/tags/${CI_COMMIT_TAG}/"
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      when: never
