--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,8 +133,8 @@ archive:
     - centos7-release
   script:
     - cd $BUILD_DIR
-    - mkdir -p archive/kafka-to-nexus
-    - cp -a ./bin archive/kafka-to-nexus
+    - mkdir -p archive/kafka-to-nexus/bin
+    - cp ./bin/file-maker ./bin/kafka-to-nexus ./bin/template-maker archive/kafka-to-nexus/bin/
     - cp -a ./lib archive/kafka-to-nexus
     - cp -a ./licenses archive/kafka-to-nexus
     - cp ./CONAN_INFO archive/kafka-to-nexus
