--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,4 @@
+
 set(kafka_to_nexus_SRC
         FlatbufferReader.cpp
         Metrics/CarbonSink.cpp
@@ -25,6 +26,7 @@ set(kafka_to_nexus_SRC
         Status/StatusReporter.cpp
         Status/StatusReporterBase.cpp
         Master.cpp
+        StatusServer.cpp
         JobCreator.cpp
         CommandSystem/JobListener.cpp
         CommandSystem/CommandListener.cpp
@@ -76,3 +78,4 @@ set(kafka_to_nexus_SRC
 add_library(filewriter_lib SHARED ${kafka_to_nexus_SRC})
 target_link_libraries(filewriter_lib PRIVATE  ${CONAN_LIBS})
 target_include_directories(filewriter_lib PUBLIC .)
+target_compile_options(filewriter_lib PRIVATE -Wno-cast-align)
