--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,27 +11,41 @@ workflow:
     - if: $CI_COMMIT_TAG
 
 variables:
-  ALMALINUX9_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-almalinux9-conan:1.2.0"
-  CENTOS7_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-conan:1.0.0"
+  ALMALINUX9_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-almalinux9-conan:1.3.0"
+  CENTOS7_IMAGE: "registry.esss.lu.se/ecdc/ess-dmsc/docker-centos7-conan:1.1.0"
   BUILD_DIR: "build"
+  CONAN_USER_HOME: "$CI_PROJECT_DIR"
 
 stages:
-  - test
+  - setup
+  - check
   - build
   - archive
   - domain
   - integration
   - publish
 
-clang-format:
-  stage: test
+conan_setup:
+  stage: setup
   image: $ALMALINUX9_IMAGE
   script:
-    - ci/check-formatting.sh
-  allow_failure: true
+    - conan config install http://github.com/ess-dmsc/conan-configuration.git
+  artifacts:
+    paths:
+      - .conan/
+    expire_in: 1 hour
+    when: always
+
+
+clang-format:
+  stage: check
+  image: $ALMALINUX9_IMAGE
+  script:
+    - find . -type f \( -name '*.cpp' -o -name '*.cxx' -o -name '*.c' -o -name '*.h' \) > clang_format_files.txt
+    - xargs clang-format --dry-run --Werror < clang_format_files.txt
 
 black:
-  stage: test
+  stage: check
   image: $ALMALINUX9_IMAGE
   script:
     - python3 -m venv venv
@@ -43,7 +57,7 @@ black:
     - black --check domain-tests
 
 cppcheck:
-  stage: test
+  stage: check
   image: $ALMALINUX9_IMAGE
   script:
     - cppcheck --version
@@ -60,12 +74,12 @@ cppcheck:
 centos7-debug:
   stage: build
   image: $CENTOS7_IMAGE
+  dependencies:
+    - conan_setup
   script:
-    - conan config install $ESS_CONAN_CONFIG_URL
     - mkdir -p $BUILD_DIR && cd $BUILD_DIR
-    - conan install .. --build=missing --build=hdf5 --profile=linux_x86_64_gcc11_legacy
-    - conan info ../conanfile.txt > CONAN_INFO
-    - cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON -DCOV=ON ..
+    - conan install .. --build=missing --build=hdf5 --profile=linux_x86_64_gcc11_legacy -s build_type=Debug
+    - cmake .. -GNinja -DCMAKE_BUILD_TYPE=Debug -DRUN_DOXYGEN=ON -DCOV=ON
     - ninja all UnitTests docs
     - ninja coverage
     - cat coverage.txt
@@ -82,37 +96,44 @@ centos7-debug:
 centos7-release:
   stage: build
   image: $CENTOS7_IMAGE
+  dependencies:
+    - conan_setup
   script:
-    - conan config install $ESS_CONAN_CONFIG_URL
     - mkdir -p $BUILD_DIR && cd $BUILD_DIR
-    - conan install .. --build=missing --build=hdf5 --profile=linux_x86_64_gcc11_legacy
-    - conan info ../conanfile.txt > CONAN_INFO
-    - ../ci/configure-release.sh .. .
-    - ninja all UnitTests docs
-    - ./bin/kafka-to-nexus --version
-    - ./bin/UnitTests --gtest_output=xml:test-output.xml
+    - conan install .. --build=missing --build=hdf5 --profile=linux_x86_64_gcc11_legacy -s build_type=Release
+    - cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release
+    - ninja all docs
   artifacts:
     paths:
-      - $BUILD_DIR/test-output.xml
-      - $BUILD_DIR/CONAN_INFO
-      - $BUILD_DIR/bin
-      - $BUILD_DIR/lib
-      - $BUILD_DIR/licenses
-    reports:
-      junit: $BUILD_DIR/test-output.xml
+      - $BUILD_DIR/
 
 almalinux9-debug:
   stage: build
   image: $ALMALINUX9_IMAGE
+  dependencies:
+    - conan_setup
   script:
-    - conan config install $ESS_CONAN_CONFIG_URL
     - mkdir -p $BUILD_DIR && cd $BUILD_DIR
-    - conan install .. --build=missing --profile=linux_x86_64_gcc11
-    - conan info ../conanfile.txt > CONAN_INFO
-    - cmake -GNinja -DCMAKE_BUILD_TYPE=Debug -DCONAN=MANUAL -DRUN_DOXYGEN=ON ..
-    - ninja all UnitTests docs
-    - ./bin/kafka-to-nexus --version
-    - ./bin/UnitTests
+    - conan install .. --build=missing --profile=linux_x86_64_gcc11 -s build_type=Debug
+    - cmake .. -GNinja -DCMAKE_BUILD_TYPE=Debug -DRUN_DOXYGEN=ON
+    - ninja all
+  artifacts:
+    paths:
+      - $BUILD_DIR/
+
+almalinux9-release:
+  stage: build
+  image: $ALMALINUX9_IMAGE
+  dependencies:
+    - conan_setup
+  script:
+    - mkdir -p $BUILD_DIR && cd $BUILD_DIR
+    - conan install .. --build=missing --profile=linux_x86_64_gcc11 -s build_type=Release
+    - cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release
+    - ninja all docs
+  artifacts:
+    paths:
+      - $BUILD_DIR/
 
 archive:
   stage: archive
